--- a/FliplloCliente/InterfazGrafica/App.config
+++ b/FliplloCliente/InterfazGrafica/App.config
@@ -5,25 +5,35 @@
 	</startup>
 	<system.serviceModel>
 		<behaviors>
-      
-    </behaviors>
-<bindings>
-            <netTcpBinding>
-                <binding name="NetTcpBinding_IServiciosDeFlipllo">
-                    <security mode="None">
-                        <transport sslProtocols="None" />
-                    </security>
-                </binding>
-            </netTcpBinding>
-        </bindings>
-        <client>
-            <endpoint address="net.tcp://192.168.50.96:8091/ServiciosDeComunicacion.ServiciosDeFlipllo"
-                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
-                contract="ServiciosDeFlipllo.IServiciosDeFlipllo" name="NetTcpBinding_IServiciosDeFlipllo" />
-						<endpoint address="net.tcp://192.168.50.96:8091/ServiciosDeComunicacion.ServiciosDeFlipllo"
-                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
-                contract="ServiciosDeFlipllo.IServiciosDeFliplloCallback" name="NetTcpBinding_IServiciosDeFlipllo" />
-        </client>
 
+		</behaviors>
+		<bindings>
+			<netTcpBinding>
+				<binding name="NetTcpBinding_IServiciosDeFlipllo">
+					<security mode="None">
+						<transport sslProtocols="None" />
+					</security>
+				</binding>
+			</netTcpBinding>
+		</bindings>
+		<client>
+			
+			<endpoint address="net.tcp://192.168.50.96:8091/ServiciosDeFlipllo/ServiciosDeComunicacion.ServiciosDeFlipllo"
+					binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
+					contract="ServiciosDeFlipllo.IServiciosDeFlipllo" name="NetTcpBinding_IServiciosDeFlipllo" />
+			
+			<endpoint address="net.tcp://192.168.50.96:8091/ServiciosDeFlipllo/ServiciosDeComunicacion.ServiciosDeFlipllo"
+					binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
+					contract="ServiciosDeFlipllo.IServiciosDeFliplloCallback" name="NetTcpBinding_IServiciosDeFlipllo" />
+			
+			
+			<endpoint address="net.tcp://192.168.50.96:8091/ServiciosDeJuego/ServiciosDeComunicacion.ServiciosDeJuego"
+					binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
+					contract="ServiciosDeJuego.IServiciosDeJuego" name="NetTcpBinding_IServiciosDeJuego" />
+			
+			<endpoint address="net.tcp://192.168.50.96:8091/ServiciosDeJuego/ServiciosDeComunicacion.ServiciosDeJuego"
+					binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IServiciosDeFlipllo"
+					contract="ServiciosDeJuego.IServiciosDeJuegoCallback" name="NetTcpBinding_IServiciosDeJuego" />
+		</client>
 	</system.serviceModel>
 </configuration>
