--- a/FliplloCliente/ServiciosDeComunicacion/ServiciosDeComunicacion.csproj
+++ b/FliplloCliente/ServiciosDeComunicacion/ServiciosDeComunicacion.csproj
@@ -41,10 +41,13 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CallbackDeJuego.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxy\ChatDelServidorProxy.cs" />
+    <Compile Include="Proxy\ServidorDeJuego.cs" />
     <Compile Include="ServiciosDeCallback.cs" />
   </ItemGroup>
   <ItemGroup>
